syntax = "proto3";
package control_plane;

message ShutdownRequest {}
message ShutdownResponse {}

service Api {
    rpc Shutdown(ShutdownRequest) returns (ShutdownResponse) {}
}
